# ROS2_HOMEWORK

./: README.md  icksu_subscriber.py  my_test_1  package.xml
icksu_homework1_pkg/: setup.cfg  setup.py
icksu_homework1_pkg/icksu_homework1_pkg/: icksu_publisher.py
