<?xml version="1.0"?>
<package format="2">
  <name>icksu_homework1_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 package for homework, includes publisher and subscriber nodes.</description>
  <maintainer email="icksu@todo.todo">icksu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

